<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/total_setting_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_capacity_setting_hint"
        style="@style/TextAppearance.AppCompat.Medium"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_setting_min_hint"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="最小值" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/total_setting_min_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_setting_max_hint"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="最大值" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/total_setting_max_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/lottery_random_count_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="抽样数量"
        style="@style/TextAppearance.AppCompat.Medium"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/total_setting_count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:inputType="number" />
    <TextView
        android:id="@+id/lottery_random_level_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/dialog_random_value_hint"
        style="@style/TextAppearance.AppCompat.Medium"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/lottery_random_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <TextView
            android:id="@+id/lottery_random_level_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/dialog_random_value_hint_low" />

        <TextView
            android:id="@+id/lottery_random_level_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/dialog_random_value_hint_high" />

    </LinearLayout>
</LinearLayout>