<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sususweet.lottery.SingleRandomFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/Card.List.LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lottery_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:maxLines="1"
                android:text="@string/lottery_result_none"
                android:textColor="@color/colorAccent"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/lottery_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="jelly_bean" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/lottery_control"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="?android:attr/textSelectHandle"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/lottery_setting"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/ic_settings_black_24dp"
                android:tint="@color/colorAccent"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>
